🎉 v2.0.0 - Sistema Zarpar Completo con Documentación Exhaustiva
✨ CARACTERÍSTICAS PRINCIPALES:
- Sistema POS completo con carrito de compras
- Gestión de vendedores con eliminación inteligente (hard delete + soft delete fallback)
- Multi-sucursal (7 sucursales: Pando, Maldonado, Rivera, Melo, Paysandú, Salto, Tacuarembó)
- Autenticación JWT con permisos por rol (admin/sucursal)
- Frontend: React 18 + TypeScript + Vite + Ant Design 5
- Backend: Express + TypeScript + MySQL 8.0
- Docker para base de datos

📚 DOCUMENTACIÓN COMPLETA:
- .cursorrules: Contexto completo para agentes IA (1,687 líneas) - REGLAS 1-11
- CHANGELOG.md: Historial detallado de todos los cambios
- README.md: Documentación profesional con badges y guías
- GITHUB_SETUP.md: Guía paso a paso para subir a GitHub
- RESUMEN_PARA_GITHUB.md: Resumen ejecutivo del proyecto
- 9+ archivos markdown de documentación técnica

🔒 SEGURIDAD IMPLEMENTADA:
- Prepared statements en TODAS las consultas SQL
- JWT con middleware de autenticación (verificarAutenticacion)
- Middleware de permisos (verificarAdmin)
- Validación de inputs en backend
- .gitignore configurado correctamente
- Variables sensibles en .env (NO se suben)

💾 BASE DE DATOS:
- Backup completo incluido (database/backup_completo.sql)
- 7 tablas de clientes independientes por sucursal
- Sistema de ventas completamente implementado
- Foreign Keys documentadas (7 FK de clientes → vendedores)
- Triggers y stored procedures incluidos

⭐ SISTEMA DE ELIMINACIÓN INTELIGENTE:
- Hard delete si vendedor NO tiene clientes/ventas
- Soft delete automático si tiene relaciones (preserva integridad)
- UI con advertencia visual fuerte (Alert de Ant Design)
- Mensajes descriptivos según resultado
- Manejo de Foreign Key Constraints

🏢 MULTI-SUCURSAL:
- 7 sucursales físicas independientes
- Cada sucursal con su tabla de clientes
- Admin (admin@zarparuy.com) accede a TODAS
- Usuarios de sucursal solo ven su sucursal
- 'Administrador' es ROL, NO sucursal (documentado en reglas

--- a/.gitignore
+++ b/.gitignore
@@ -1,82 +1,118 @@
-# Dependencies
-node_modules/
-package-lock.json
+# 🚫 .gitignore - Sistema Zarpar
+# Archivos y carpetas que NO se subirán a GitHub
 
-# Environment variables
+# ==========================================
+# 🔐 ARCHIVOS DE CONFIGURACIÓN SENSIBLES
+# ==========================================
 .env
 .env.local
-.env.production
+.env.development.local
+.env.test.local
+.env.production.local
 
-# Build outputs
-dist/
-build/
-*.log
-*.tgz
-
-# Editor directories
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-
-# OS files
-.DS_Store
-Thumbs.db
-desktop.ini
-
-# Test coverage
-coverage/
-
-# Temporary files
-*.tmp
-temp/
-tmp/
-
-# Logs
-logs/
-*.log
+# ==========================================
+# 📦 NODE_MODULES
+# ==========================================
+node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-lerna-debug.log*
-pnpm-debug.log*
 
-# Runtime data
-pids/
+# ==========================================
+# 🗄️ BASE DE DATOS
+# ==========================================
+# Backups con timestamp (generados automáticamente)
+database/backup_completo_*.sql
+
+# NOTA: database/backup_completo.sql SÍ se sube (backup principal)
+# Solo se ignoran los backups con timestamp
+
+# ==========================================
+# 🏗️ BUILD Y DIST
+# ==========================================
+dist/
+build/
+*.local
+
+# ==========================================
+# 📝 LOGS
+# ==========================================
+logs/
+*.log
+pids
 *.pid
 *.seed
 *.pid.lock
 
-# TypeScript cache
+# ==========================================
+# 🔍 DIRECTORIOS DE SISTEMA
+# ==========================================
+.DS_Store
+Thumbs.db
+desktop.ini
+
+# ==========================================
+# 🧪 TESTING
+# ==========================================
+coverage/
+.nyc_output
+
+# ==========================================
+# 🔧 EDITORES E IDEs
+# ==========================================
+# VSCode
+.vscode/
+.vscode/*
+!.vscode/extensions.json
+!.vscode/settings.json
+
+# Cursor AI
+.cursor/
+
+# JetBrains (WebStorm, etc.)
+.idea/
+*.iml
+*.iws
+
+# Sublime Text
+*.sublime-project
+*.sublime-workspace
+
+# ==========================================
+# 🐳 DOCKER
+# ==========================================
+# Ignorar datos de Docker (si usas volumes locales)
+docker-data/
+mysql-data/
+
+# ==========================================
+# 🔐 TYPESCRIPT
+# ==========================================
 *.tsbuildinfo
 
-# Optional npm cache directory
-.npm
+# ==========================================
+# 📱 OTROS
+# ==========================================
+# Temporary files
+*.tmp
+*.temp
+*.swp
+*.swo
+*~
 
-# Optional eslint cache
-.eslintcache
+# OS generated files
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 
-# Optional REPL history
-.node_repl_history
-
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-.yarn-integrity
-
-# Stores VSCode versions used for testing VSCode extensions
-.vscode-test
-
-# Playwright
-playwright-report/
-test-results/
-
-# Database backups (excepto el backup inicial)
-database/backup_*.sql
-!database/backup_completo.sql
-
-# Archivos temporales de documentación (ya están consolidados)
-*_TEMPORAL.md
-*_OLD.md
+# ==========================================
+# ✅ ARCHIVOS QUE SÍ SE SUBEN
+# ==========================================
+# - database/backup_completo.sql (backup principal)
+# - .cursorrules (reglas del proyecto)
+# - CHANGELOG.md
+# - README.md
+# - Todos los archivos de código fuente
+# - package.json y package-lock.json
