--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dayjs": "^1.11.18",
     "dotenv": "^17.2.1",
     "express": "^4.21.2",
+    "framer-motion": "^12.23.24",
     "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.3",
@@ -35,9 +36,11 @@
     "lucide-react": "^0.511.0",
     "mysql2": "^3.15.3",
     "react": "^18.3.1",
+    "react-confetti": "^6.4.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.3.0",
-    "recharts": "^2.12.7",
+    "react-to-print": "^3.2.0",
+    "recharts": "^2.15.4",
     "tailwind-merge": "^3.0.2",
     "zustand": "^5.0.3"
   },
