--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@ant-design/colors": "^7.1.0",
     "@ant-design/icons": "^5.4.0",
     "@types/jspdf": "^1.3.3",
+    "@types/node-cron": "^3.0.11",
     "antd": "^5.21.0",
     "axios": "^1.7.7",
     "bcryptjs": "^3.0.2",
@@ -35,6 +36,7 @@
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.511.0",
     "mysql2": "^3.15.3",
+    "node-cron": "^4.2.1",
     "react": "^18.3.1",
     "react-confetti": "^6.4.0",
     "react-dom": "^18.3.1",
