🚀 DEPLOY: Guía completa para subir a producción
ARCHIVOS NUEVOS:
📚 GUIA_DEPLOY_PRODUCCION.md (guía exhaustiva)
⚡ DEPLOY_RAPIDO.md (pasos rápidos de 10 min)
🔐 ENV_PRODUCCION_EJEMPLO.txt (variables de entorno)
⚙️  tsconfig.api.json (config TypeScript para backend)

SCRIPTS AGREGADOS (package.json):
- build:api → Compila backend para producción
- start:api → Inicia backend compilado
- preview → Preview del frontend con host

PLATAFORMAS RECOMENDADAS:
⭐ Railway (TODO en un solo lugar) - -20/mes
🆓 Render (Free tier) - Gratis + /mes MySQL
🏢 DigitalOcean (Empresarial) - -30/mes

RECOMENDACIÓN:
👉 Railway es la mejor opción:
  ✅ Deploy completo en 10 minutos
  ✅ MySQL incluido
  ✅  USD gratis para empezar
  ✅ Estable y profesional

LISTO PARA DEPLOY 🚀

--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "scripts": {
     "client:dev": "vite",
     "build": "tsc -b && vite build",
+    "build:api": "tsc --project tsconfig.api.json",
+    "start:api": "node api/dist/server.js",
     "lint": "eslint .",
-    "preview": "vite preview",
+    "preview": "vite preview --port 5678 --host",
     "check": "tsc --noEmit",
     "server:dev": "nodemon",
     "dev": "concurrently \"npm run client:dev\" \"npm run server:dev\"",
