🎨 FRONTEND: Configurado para servir desde backend
✅ CAMBIOS:
- .env.production creado (VITE_API_URL=/api)
- api/app.ts modificado para servir archivos estáticos
- package.json: Agregado script build:all
- vite.config.ts: Plugin problemático deshabilitado
- Frontend compilado exitosamente en /dist

🚀 LISTO PARA DEPLOYMENT:
- Backend sirve frontend estático
- Una sola URL para toda la app
- SPA routing configurado correctamente

--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "version": "1.0.0",
   "scripts": {
     "client:dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "vite build --mode production",
     "build:api": "tsc --project tsconfig.api.json",
+    "build:all": "npm run build:api && npm run build",
     "start:api": "node api/dist/server.js",
     "lint": "eslint .",
     "preview": "vite preview --port 5678 --host",
