--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-confetti": "^6.4.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.3.0",
+    "react-select": "^5.10.2",
     "react-to-print": "^3.2.0",
     "recharts": "^2.15.4",
     "tailwind-merge": "^3.0.2",
