--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.511.0",
+    "moment": "^2.30.1",
     "mysql2": "^3.15.3",
     "node-cron": "^4.2.1",
     "react": "^18.3.1",
@@ -63,6 +64,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/moment": "^2.11.29",
     "@types/node": "^22.15.30",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
