--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "lucide-react": "^0.511.0",
     "moment": "^2.30.1",
     "mysql2": "^3.15.3",
+    "mysqldump": "^3.2.0",
     "node-cron": "^4.2.1",
     "react": "^18.3.1",
     "react-confetti": "^6.4.0",
